--- a/README
+++ b/README
@@ -2,13 +2,25 @@
 # LIBZIP #
 ##########
 
-LibZip - bla
+LibZip - Create very low weight self executables. This is the generator of TinyPerl.
 
 ###############
 # DESCRIPTION #
 ###############
 
-bla bla
+This module will create low weight self executables, that have this features:
+
+ * Perl library compressed in a lib.zip file.
+ * Zlib compiled inside the executable (binary).
+ * Initialize Package code is compressed in the sources.
+ * Appended code to the executable can be compressed with LZW.
+ * Remove POD from the source of files inside lib.zip.
+ * Can work with UPX to automatically compress the binaries inside lib.zip.
+
+All this featues will generate a I<Initialize Package> of only 28 Kb,
+and a executable of less than 80Kb (Win32), plus PerlLib. This means that a 
+hellow world script as a self executable will have only 350KB (Win32).
+
 
 See POD for more...
 
