Import of GMPASSOS/LibZip-0.04 from CPAN.
gitpan-cpan-distribution: LibZip
gitpan-cpan-version:      0.04
gitpan-cpan-path:         GMPASSOS/LibZip-0.04.tar.gz
gitpan-cpan-author:       GMPASSOS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,12 +1,18 @@
 Revision history for Perl extension LibZip.
 
-0.03  2004-06-06
+0.04  2004-06-14
+      - Enabled/fixed UPX over the executable on Win32.
+      - Fixed original perl option -c for check syntax (when -c is enabled in the exec).
+      - Fixed execution warnings when lib.zip is not found.
+
+
+0.03  2004-06-11
       - POD fixes & upgrades.
       - Added support to Win32 icon in the executables.
       - Added option to create GUI executables (non console).
 
 
-0.02  2004-06-06
+0.02  2004-06-10
       - LibZip recreated from scratch. Result: smaller and faster binaries.
 
 
