Import of GMPASSOS/LibZip-0.05 from CPAN.
gitpan-cpan-distribution: LibZip
gitpan-cpan-version:      0.05
gitpan-cpan-path:         GMPASSOS/LibZip-0.05.tar.gz
gitpan-cpan-author:       GMPASSOS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension LibZip.
 
+0.05  2004-06-14
+      - Fixed warning for -w
+      - Fixed option --help when -h is enabled.
+      - Sources of TinyPerl in distributuin finisheds.
+
+
 0.04  2004-06-14
       - Enabled/fixed UPX over the executable on Win32.
       - Fixed original perl option -c for check syntax (when -c is enabled in the exec).
