--- a/Changes
+++ b/Changes
@@ -1,9 +1,19 @@
 Revision history for Perl extension LibZip.
 
+
+0.06  2004-12-11
+      - Enable .pl files in the libzip.modules file.
+      - Check to clean tmp directories in the BEGIN and END of the application.
+        Before was only in the END, and applications that crashes will never clean the directories.
+      - TinyPerl updated.
+      - Perl options alloweds can use modules at lib.zip now.
+        This is important for -c (check syntax)!!!
+
+
 0.05  2004-06-14
       - Fixed warning for -w
       - Fixed option --help when -h is enabled.
-      - Sources of TinyPerl in distributuin finisheds.
+      - Sources of TinyPerl in distribution finisheds.
 
 
 0.04  2004-06-14
